debhelper (9.20150508) UNRELEASED; urgency=medium

  * Buildsystem.pm: Apply patch from Emmanuel Bourg to
    provide doit_in_{build,source}dir_noerror methods.
    (Closes: #785811)

 -- Niels Thykier <niels@thykier.net>  Wed, 20 May 2015 21:53:08 +0200

debhelper (9.20150507) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_bugfiles: Fix regression in installing the reportbug
    script correctly.  Thanks to Jakub Wilk for reporting.
    (Closes: #784648)

  [ Translation updates ]
  * pt - Thanks to Américo Monteiro.
    (Closes: #784582)

 -- Niels Thykier <niels@thykier.net>  Thu, 07 May 2015 20:07:49 +0200

debhelper (9.20150502) unstable; urgency=medium

  * dh_compress: REVERT change to avoid compressing ".xhtml"
    files due to #784016.  (Reopens: #740405, Closes: #784016)

 -- Niels Thykier <niels@thykier.net>  Sat, 02 May 2015 10:21:42 +0200

debhelper (9.20150501) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_strip: Recognise .node as potential ELF binaries that
    should be stripped like a regular shared library.  Thanks
    to Paul Tagliamonte for the report.  (Closes: #668852)
  * dh_shlibdeps: Recognise .node as potential ELF binaries that
    should be processed like a regular shared library.  Thanks
    to Paul Tagliamonte for the report.  (Closes: #668851)
  * Convert package to the 3.0 (native) format, so dpkg-source
    strips the .git directory by default during build.
  * Reorder two paragraphs in d/copyright to avoid one of them
    being completely overwritten by the other.
  * d/control: Use the canonical URLs for the Vcs-* fields.
  * dh_makeshlibs: Apply patch from Jérémy Bobbio to ensure
    stable ordering of generated shlibs files.
    (Closes: #774100)
  * dh_icons: Apply patch from Jérémy Bobbio to ensure stable
    ordering of the icon list inserted into generated maintainer
    scripts.  (Closes: #774102)
  * Dh_lib: Add a public "make_symlink" subroutine allowing