@@ -173,6 +173,12 @@ nonquiet_print($message)
 error($errormsg)
 	Pass this command a string, it will output it to standard error and
 	exit.
+error_exitcode($cmd)
+	Pass this subroutine a string (representing a command line), it will
+	output a message describing that the command failed to standard error
+	and exit.  Note that this relies on the value of $? to produce a
+	meaningful error message.  Even if $? is 0, this /will/ still terminate
+	the program (although with a rather unhelpful message).
 warning($message)
 	Pass this command a string, and it will output it to standard error
 	as a warning message.
