@@ -3,6 +3,10 @@ debhelper (9.20150508) UNRELEASED; urgency=medium
   * Buildsystem.pm: Apply patch from Emmanuel Bourg to
     provide doit_in_{build,source}dir_noerror methods.
     (Closes: #785811)
+  * Dh_Lib.pm: Promote error_exitcode to a regular exported
+    subroutine (from an internal one).  For backwards
+    compatibility the old _error_exitcode will be provided
+    until a known external is updated.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 20 May 2015 21:53:08 +0200
 
